<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.tennisscorekeeper.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tennis_portrait"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:theme="@style/ScoreBoard" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp">

            <TableRow android:theme="@style/ScoreBoardHeader">

                <TextView
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/one" />

                <View style="@style/VerticalLine" />

                <TextView
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/two" />

                <View style="@style/VerticalLine" />

                <TextView
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/three" />

                <View style="@style/VerticalLine" />

                <TextView
                    android:layout_weight="1"
                    android:padding="4dp" />

                <View style="@style/VerticalLine" />

                <TextView
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/sets" />

                <View style="@style/VerticalLine" />

                <TextView
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/games" />

                <View style="@style/VerticalLine" />

                <TextView
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/points" />

            </TableRow>

            <View style="@style/HorizontalLine" />

            <TableRow android:theme="@style/ScoreBoard">

                <TextView
                    android:id="@+id/set1_player_a"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:gravity="center"
                    android:textSize="24sp" />

                <View style="@style/VerticalLine" />

                <TextView
                    android:id="@+id/set2_player_a"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:gravity="center"
                    android:textSize="24sp" />

                <View style="@style/VerticalLine" />

                <TextView
                    android:id="@+id/set3_player_a"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:gravity="center"
                    android:textSize="24sp" />

                <View style="@style/VerticalLine" />

                <Button
                    android:layout_margin="8dp"
                    android:onClick="pointPlayerA"
                    android:text="@string/playera" />

                <View style="@style/VerticalLine" />

                <TextView
                    android:id="@+id/sets_player_a"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:gravity="center"
                    android:textSize="24sp" />

                <View style="@style/VerticalLine" />

                <TextView
                    android:id="@+id/games_player_a"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:gravity="center"
                    android:textSize="24sp" />

                <View style="@style/VerticalLine" />

                <TextView
                    android:id="@+id/points_player_a"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:gravity="center"
                    android:textSize="24sp" />

            </TableRow>

            <View style="@style/HorizontalLine" />

            <TableRow android:theme="@style/ScoreBoard">

                <TextView
                    android:id="@+id/set1_player_b"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:gravity="center"
                    android:textSize="24sp" />

                <View style="@style/VerticalLine" />

                <TextView
                    android:id="@+id/set2_player_b"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:gravity="center"
                    android:textSize="24sp" />

                <View style="@style/VerticalLine" />

                <TextView
                    android:id="@+id/set3_player_b"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:gravity="center"
                    android:textSize="24sp" />

                <View style="@style/VerticalLine" />

                <Button
                    android:layout_margin="8dp"
                    android:onClick="pointPlayerB"
                    android:text="@string/playerb" />

                <View style="@style/VerticalLine" />

                <TextView
                    android:id="@+id/sets_player_b"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:gravity="center"
                    android:textSize="24sp" />

                <View style="@style/VerticalLine" />

                <TextView
                    android:id="@+id/games_player_b"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:gravity="center"
                    android:textSize="24sp" />

                <View style="@style/VerticalLine" />

                <TextView
                    android:id="@+id/points_player_b"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:gravity="center"
                    android:textSize="24sp" />

            </TableRow>

        </TableLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal"
            android:theme="@style/ScoreBoardHeader">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/playera" />

            <View style="@style/VerticalLine" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/playerb" />

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <TableRow
                android:paddingTop="4dp"
                android:theme="@style/ScoreBoard">

                <Button
                    style="@style/PlusButton"
                    android:onClick="doubleFaultA"
                    android:text="@string/plus" />

                <TextView
                    android:id="@+id/double_faults_a"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="#00000000"
                    android:gravity="center"
                    android:textSize="20sp" />

                <TextView
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:gravity="center"
                    android:text="@string/doublefaults"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/double_faults_b"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="#00000000"
                    android:gravity="center"
                    android:textSize="20sp" />

                <Button
                    style="@style/PlusButton"
                    android:onClick="doubleFaultB"
                    android:text="@string/plus" />

            </TableRow>

            <TableRow android:theme="@style/ScoreBoard">

                <Button
                    style="@style/PlusButton"
                    android:onClick="aceA"
                    android:text="@string/plus" />

                <TextView
                    android:id="@+id/aces_a"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="#00000000"
                    android:gravity="center"
                    android:textSize="20sp" />

                <TextView
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:gravity="center"
                    android:text="@string/aces"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/aces_b"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="#00000000"
                    android:gravity="center"
                    android:textSize="20sp" />

                <Button
                    style="@style/PlusButton"
                    android:onClick="aceB"
                    android:text="@string/plus" />

            </TableRow>

            <TableRow android:theme="@style/ScoreBoard">

                <Button
                    style="@style/PlusButton"
                    android:onClick="unenforcedA"
                    android:text="@string/plus" />

                <TextView
                    android:id="@+id/unenforced_a"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="#00000000"
                    android:gravity="center"
                    android:textSize="20sp" />

                <TextView
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:gravity="center"
                    android:text="@string/unenforced"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/unenforced_b"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="#00000000"
                    android:gravity="center"
                    android:textSize="20sp" />

                <Button
                    style="@style/PlusButton"
                    android:onClick="unenforcedB"
                    android:text="@string/plus" />

            </TableRow>

            <TableRow
                android:paddingBottom="4dp"
                android:theme="@style/ScoreBoard">

                <Button
                    style="@style/PlusButton"
                    android:onClick="enforcedA"
                    android:text="@string/plus" />

                <TextView
                    android:id="@+id/enforced_a"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="#00000000"
                    android:gravity="center"
                    android:textSize="20sp" />

                <TextView
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:gravity="center"
                    android:text="@string/enforced"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/enforced_b"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="#00000000"
                    android:gravity="center"
                    android:textSize="20sp" />

                <Button
                    style="@style/PlusButton"
                    android:onClick="enforcedB"
                    android:text="@string/plus" />

            </TableRow>

        </TableLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:onClick="reset"
            android:text="@string/reset"
            android:theme="@style/AppTheme" />

    </LinearLayout>

</ScrollView>